--- a/freightmanagement/freightmanagement/report/report_order.xml
+++ b/freightmanagement/freightmanagement/report/report_order.xml
@@ -5,8 +5,8 @@
             <field name="name">Freight Order</field>
             <field name="model">freight.order</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">ob_freight_management_system.report_freight_order</field>
-            <field name="report_file">ob_freight_management_system.report_freight_order</field>
+            <field name="report_name">freightmanagement.report_freight_order</field>
+            <field name="report_file">freightmanagement.report_freight_order</field>
             <field name="print_report_name">'Freight Order - %s' % object.name</field>
             <field name="binding_model_id" ref="model_freight_order"/>
             <field name="binding_type">report</field>
